[tool.poetry]
name = "goit-web-hw-06"
version = "0.1.0"
description = ""
authors = ["ink404dot <94466285+ink404dot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^33.1.0"
psycopg2 = "^2.9.10"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
